# agentic-scheduling

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
app/: main.py  outputs.py  solver.py
app/constraints/: physician_constraints.py  team_constraints.py
app/inputs/: requests.csv  teams.csv
plans/: clinical_scheduling_init.md
tests/: conftest.py  test_constraints.py  test_inputs.py  test_outputs.py  test_solver.py
